syntax = "proto3";
package mingxie.tvote;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mingxie/tvote/params.proto";
// this line is used by starport scaffolding # 1
import "mingxie/tvote/proposal_desc.proto";
import "mingxie/tvote/voter.proto";

option go_package = "mingxie/x/tvote/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mingxie/tvote/params";
  }
  // Queries a list of ShowVoter items.
	rpc ShowVoter(QueryShowVoterRequest) returns (QueryShowVoterResponse) {
		option (google.api.http).get = "/mingxie/tvote/show_voter/{vid}";
	}

// Queries a list of ListVoter items.
	rpc ListVoter(QueryListVoterRequest) returns (QueryListVoterResponse) {
		option (google.api.http).get = "/mingxie/tvote/list_voter";
	}

// Queries a list of ListProposalDesc items.
	rpc ListProposalDesc(QueryListProposalDescRequest) returns (QueryListProposalDescResponse) {
		option (google.api.http).get = "/mingxie/tvote/list_proposal_desc";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryShowVoterRequest {
  uint64 vid = 1;
}

message QueryShowVoterResponse {
  Voter voter = 1 [(gogoproto.nullable) = false];
}

message QueryListVoterRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListVoterResponse {
  repeated Voter voter = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryListProposalDescRequest {
cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListProposalDescResponse {
  repeated ProposalDesc proposalDesc = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
